--- a/public/course/course-5/index.html
+++ b/public/course/course-5/index.html
@@ -86,7 +86,7 @@
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-dark p-0">
         <a class="navbar-brand" href="/"><img class="img-fluid"
-            src="http://localhost:1313/images/logo.png" alt="Educenter | hugo education template"></a>
+            src="http://localhost:1313/images/logo.png" alt="台灣尤塞氏症暨視聽弱協會 | 尤塞氏症以及視聽雙弱者之病友團體"></a>
         <button class="navbar-toggler rounded-0" type="button" data-toggle="collapse" data-target="#navigation"
           aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -338,15 +338,15 @@ labore et dolore magnam aliquam quaerat voluptatem.</p>
       
       <div class="col-lg-4 col-sm-6 mb-5">
         <div class="card p-0 border-primary rounded-0 hover-shadow">
-  <img class="card-img-top rounded-0" src="/images/courses/course-4.jpg" alt="JavaScript">
+  <img class="card-img-top rounded-0" src="/images/courses/course-6.jpg" alt="Vlogging">
   <div class="card-body">
     <ul class="list-inline mb-2">
       <li class="list-inline-item"><i class="ti-calendar"></i> 06 Month</li>
-      <li class="list-inline-item"><i class="ti-bookmark-alt"></i> Programming</li>
+      <li class="list-inline-item"><i class="ti-bookmark-alt"></i> Photography</li>
     </ul>
-    <h4 class="card-title"><a href="http://localhost:1313/course/course-4/">JavaScript</a></h4>
+    <h4 class="card-title"><a href="http://localhost:1313/course/course-6/">Vlogging</a></h4>
     <p class="card-text mb-4">About Course Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor …</p>
-    <a href="http://localhost:1313/course/course-4/" class="btn btn-primary btn-sm">申請</a>
+    <a href="http://localhost:1313/course/course-6/" class="btn btn-primary btn-sm">申請</a>
   </div>
 </div>
       </div>
@@ -402,7 +402,7 @@ labore et dolore magnam aliquam quaerat voluptatem.</p>
       <div class="row">
         <div class="col-lg-4 col-sm-8 mb-5 mb-lg-0">
           
-          <a class="logo-footer" href="/"><img class="img-fluid mb-4" src="http://localhost:1313/images/logo.png" alt="Educenter | hugo education template"></a>
+          <a class="logo-footer" href="/"><img class="img-fluid mb-4" src="http://localhost:1313/images/logo.png" alt="台灣尤塞氏症暨視聽弱協會 | 尤塞氏症以及視聽雙弱者之病友團體"></a>
           <ul class="list-unstyled">
             <li class="mb-4">9567 Turner Trace Apt. BC C3G8A4</li>
             <li class="mb-4"><a href="mailto:info@educenter.com">info@educenter.com</a></li>
