--- a/public/teacher/index.html
+++ b/public/teacher/index.html
@@ -86,7 +86,7 @@
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-dark p-0">
         <a class="navbar-brand" href="/"><img class="img-fluid"
-            src="http://localhost:1313/images/logo.png" alt="Educenter | hugo education template"></a>
+            src="http://localhost:1313/images/logo.png" alt="台灣尤塞氏症暨視聽弱協會 | 尤塞氏症以及視聽雙弱者之病友團體"></a>
         <button class="navbar-toggler rounded-0" type="button" data-toggle="collapse" data-target="#navigation"
           aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -450,7 +450,7 @@
       <div class="row">
         <div class="col-lg-4 col-sm-8 mb-5 mb-lg-0">
           
-          <a class="logo-footer" href="/"><img class="img-fluid mb-4" src="http://localhost:1313/images/logo.png" alt="Educenter | hugo education template"></a>
+          <a class="logo-footer" href="/"><img class="img-fluid mb-4" src="http://localhost:1313/images/logo.png" alt="台灣尤塞氏症暨視聽弱協會 | 尤塞氏症以及視聽雙弱者之病友團體"></a>
           <ul class="list-unstyled">
             <li class="mb-4">9567 Turner Trace Apt. BC C3G8A4</li>
             <li class="mb-4"><a href="mailto:info@educenter.com">info@educenter.com</a></li>
