--- a/public/related_news/course-2/index.html
+++ b/public/related_news/course-2/index.html
@@ -323,15 +323,15 @@ labore et dolore magnam aliquam quaerat voluptatem.</p>
       
       <div class="col-lg-4 col-sm-6 mb-5">
         <div class="card p-0 border-primary rounded-0 hover-shadow">
-  <img class="card-img-top rounded-0" src="/images/courses/course-6.jpg" alt="Vlogging">
+  <img class="card-img-top rounded-0" src="/images/courses/course-5.jpg" alt="Algorithm">
   <div class="card-body">
     <ul class="list-inline mb-2">
       <li class="list-inline-item"><i class="ti-calendar"></i> 06 Month</li>
-      <li class="list-inline-item"><i class="ti-bookmark-alt"></i> Photography</li>
+      <li class="list-inline-item"><i class="ti-bookmark-alt"></i> Programming</li>
     </ul>
-    <h4 class="card-title"><a href="http://localhost:1313/related_news/course-6/">Vlogging</a></h4>
+    <h4 class="card-title"><a href="http://localhost:1313/related_news/course-5/">Algorithm</a></h4>
     <p class="card-text mb-4">About Course Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor …</p>
-    <a href="http://localhost:1313/related_news/course-6/" class="btn btn-primary btn-sm">申請</a>
+    <a href="http://localhost:1313/related_news/course-5/" class="btn btn-primary btn-sm">更多</a>
   </div>
 </div>
       </div>
@@ -346,7 +346,7 @@ labore et dolore magnam aliquam quaerat voluptatem.</p>
     </ul>
     <h4 class="card-title"><a href="http://localhost:1313/related_news/course-4/">JavaScript</a></h4>
     <p class="card-text mb-4">About Course Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor …</p>
-    <a href="http://localhost:1313/related_news/course-4/" class="btn btn-primary btn-sm">申請</a>
+    <a href="http://localhost:1313/related_news/course-4/" class="btn btn-primary btn-sm">更多</a>
   </div>
 </div>
       </div>
@@ -361,7 +361,7 @@ labore et dolore magnam aliquam quaerat voluptatem.</p>
     </ul>
     <h4 class="card-title"><a href="http://localhost:1313/related_news/course-3/">Artificial Intelligence</a></h4>
     <p class="card-text mb-4">About Course Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor …</p>
-    <a href="http://localhost:1313/related_news/course-3/" class="btn btn-primary btn-sm">申請</a>
+    <a href="http://localhost:1313/related_news/course-3/" class="btn btn-primary btn-sm">更多</a>
   </div>
 </div>
       </div>
