--- a/public/about/index.html
+++ b/public/about/index.html
@@ -255,14 +255,14 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-6 col-sm-4 position-relative success-video">
-        <a class="play-btn venobox" href="https://www.youtube.com/watch?v=ResipmZmpDU" data-vbtype="video">
+        <a class="play-btn venobox" href="https://www.youtube.com/watch?v=Cj0dRoHjMq4" data-vbtype="video">
           <i class="ti-control-play"></i>
         </a>
       </div>
       <div class="col-lg-6 col-sm-8">
         <div class="bg-dark p-5">
-          <h2 class="section-title">紀錄片</h2>
-          <p>紀錄尤塞氏患者的故事</p>
+          <h2 class="section-title">聽•見幸福的樂章</h2>
+          <p>導演：許豐明 <br> <br> 本片歷經一年籌備與三年以上拍攝，紀錄一個住在南澳深山中原住民家庭，經歷三個孩子自出生即失去聽力，成長過程中，三個孩子進入青春期後，卻又面臨即將失去視力的困境。全片透過三年長期追蹤，和分子遺傳學與現代科技知識的陪伴與引導，詳細記錄故事中人物，相互交錯的緣分，如何抉擇？如何讓自己重新開始找回存在的信心和意義，既使這些人這些事，面對未來將走向黑暗的世界已是無可避免，又如何在科技與親情交織下，度過生命中的幽谷與黯淡……。</p>
         </div>
       </div>
     </div>
