--- a/public/mission/mission-2/index.html
+++ b/public/mission/mission-2/index.html
@@ -218,12 +218,11 @@
           
           <div class="col-12 mb-5">
             <ul>
-<li>institutes</li>
-<li>Smart-affiliated research</li>
-<li>Digital Access to Scholarship</li>
-<li>Smart Catalyst</li>
-<li>Smart Library Portal</li>
-<li>Smart research programs</li>
+<li>嘗試整合尤塞氏症病友的醫療資源</li>
+<li>撰寫從研究到臨床需求的醫療新知</li>
+<li>詳述需求並尋找學術機構合作機會</li>
+<li>定期翻譯美國尤塞氏症協會的電子報文章</li>
+<li>更新美國尤塞氏症協會每年尤塞氏症大會的資訊</li>
 </ul>
 
           </div>
