--- a/public/mission/mission-3/index.html
+++ b/public/mission/mission-3/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="zh-TW"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
   <meta charset="utf-8">
-  <title>CHEMICAL ENGINEERING</title>
+  <title>教育、平權</title>
 
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description"
-    content="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore. dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.">
+    content="在學習、教育、日常生活工作，尋求協助病友們的資源">
   
   <meta name="author" content="台灣尤塞氏症暨視聽弱協會">
   
@@ -178,9 +178,9 @@
         <ul class="list-inline custom-breadcrumb">
           <li class="list-inline-item h2"><a class="text-primary font-secondary" href="/">首頁</a></li>
           <li class="list-inline-item h5"><i class="ti-angle-right text-white"></i></li>
-          <li class="list-inline-item text-white h3 font-secondary">CHEMICAL ENGINEERING</li>
+          <li class="list-inline-item text-white h3 font-secondary">教育、平權</li>
         </ul>
-        <p class="text-lighten">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore. dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+        <p class="text-lighten">在學習、教育、日常生活工作，尋求協助病友們的資源</p>
       </div>
     </div>
   </div>
@@ -195,7 +195,7 @@
       <div class="col-lg-8 order-2 order-lg-1">
         <div class="row">
           <div class="col-12 mb-4">
-            <img src="/images/scholarship/scholarship-item-3.jpg" alt="blog-thumb" class="img-fluid w-100">
+            <img src="/images/mission/right.jpg" alt="blog-thumb" class="img-fluid w-100">
           </div>
           <div class="col-12">
             <ul class="list-inline">
@@ -218,12 +218,10 @@
           
           <div class="col-12 mb-5">
             <ul>
-<li>institutes</li>
-<li>Smart-affiliated research</li>
-<li>Digital Access to Scholarship</li>
-<li>Smart Catalyst</li>
-<li>Smart Library Portal</li>
-<li>Smart research programs</li>
+<li>關注尤塞氏症以及視聽雙弱病友的權益</li>
+<li>學習、工作的無障礙輔助資源</li>
+<li>特殊教育資源的橫向連結與需求</li>
+<li>與不同工作坊團體協同尋求合作</li>
 </ul>
 
           </div>
