--- a/public/research/index.html
+++ b/public/research/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="zh-TW"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
   <meta charset="utf-8">
-  <title>Our Courses</title>
+  <title>研究資源</title>
 
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description"
-    content="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore. dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.">
+    content="此處列出協會所知、聯繫的學術研究機構以及進行中的研究計畫">
   
   <meta name="author" content="台灣尤塞氏症暨視聽弱協會">
   
@@ -171,16 +171,16 @@
 
 
 	
-<section class="page-title-section overlay" style="background-image: url('/images/backgrounds/page-title.jpg'),url('/images/backgrounds/page-title.jpg');" >
+<section class="page-title-section overlay" style="background-image: url('/images/banner/banner.jpg'),url('/images/backgrounds/page-title.jpg');" >
   <div class="container">
     <div class="row">
       <div class="col-md-8">
         <ul class="list-inline custom-breadcrumb">
           <li class="list-inline-item h2"><a class="text-primary font-secondary" href="/">首頁</a></li>
           <li class="list-inline-item h5"><i class="ti-angle-right text-white"></i></li>
-          <li class="list-inline-item text-white h3 font-secondary">Our Courses</li>
+          <li class="list-inline-item text-white h3 font-secondary">研究資源</li>
         </ul>
-        <p class="text-lighten">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore. dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+        <p class="text-lighten">此處列出協會所知、聯繫的學術研究機構以及進行中的研究計畫</p>
       </div>
     </div>
   </div>
