--- a/public/mission/mission-2/index.html
+++ b/public/mission/mission-2/index.html
@@ -6,7 +6,7 @@
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description"
-    content="尤塞氏症以及視聽雙弱者之病友團體">
+    content="建立病友取得醫療資訊的管道，並嘗試與更多潛在的研究及醫療資源合作">
   
   <meta name="author" content="台灣尤塞氏症暨視聽弱協會">
   
@@ -180,7 +180,7 @@
           <li class="list-inline-item h5"><i class="ti-angle-right text-white"></i></li>
           <li class="list-inline-item text-white h3 font-secondary">醫療、研究</li>
         </ul>
-        <p class="text-lighten"></p>
+        <p class="text-lighten">建立病友取得醫療資訊的管道，並嘗試與更多潛在的研究及醫療資源合作</p>
       </div>
     </div>
   </div>
@@ -195,7 +195,7 @@
       <div class="col-lg-8 order-2 order-lg-1">
         <div class="row">
           <div class="col-12 mb-4">
-            <img src="/images/scholarship/scholarship-item-2.jpg" alt="blog-thumb" class="img-fluid w-100">
+            <img src="/images/mission/medical-aspect.jpg" alt="blog-thumb" class="img-fluid w-100">
           </div>
           <div class="col-12">
             <ul class="list-inline">
