--- a/public/notice/index.html
+++ b/public/notice/index.html
@@ -6,7 +6,7 @@
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description"
-    content="尤塞氏症以及視聽雙弱者之病友團體">
+    content="會員代表大會、理監事會議、其他例行性行政會議公告">
   
   <meta name="author" content="台灣尤塞氏症暨視聽弱協會">
   
@@ -176,7 +176,7 @@
           <li class="list-inline-item h5"><i class="ti-angle-right text-white"></i></li>
           <li class="list-inline-item text-white h3 font-secondary">事務公告</li>
         </ul>
-        <p class="text-lighten"></p>
+        <p class="text-lighten">會員代表大會、理監事會議、其他例行性行政會議公告</p>
       </div>
     </div>
   </div>
