Whisper Colab Fix

--- a/public/document/index.html
+++ b/public/document/index.html
@@ -247,6 +247,10 @@
    <a href="http://localhost:1313/document/%E5%AA%92%E9%AB%94%E5%AE%A3%E5%82%B3%E8%B3%87%E6%BA%90/" class="h4">媒體宣傳資源</a>
 </li>
           
+          <li class="list-group-item document_list border-bottom hover-shadow bg-dark">
+   <a href="http://localhost:1313/document/whisper-colab-%E5%BD%B1%E7%89%87%E8%AA%9E%E9%9F%B3%E8%BD%89%E6%96%87%E5%AD%97%E5%B7%A5%E5%85%B7/" class="h4">Whisper Colab 影片語音轉文字工具</a>
+</li>
+          
         </ol>
       </div>
     </div>
