--- a/public/document/什麼是尤塞氏症/index.html
+++ b/public/document/什麼是尤塞氏症/index.html
@@ -254,7 +254,7 @@
 <ol>
 <li>更了解症狀進展以及將來可能會發生的情況</li>
 <li>與您的醫生、親人、朋友、學校、工作場所討論您現在需要什麼，以及將來可能需要什麼</li>
-<li>尋找並隨時了解可能對您有益的研究、研究、試驗和新療法</li>
+<li>尋找並隨時了解可能對您有益、研究、試驗和新療法</li>
 </ol>
 <h4 id="第一型">第一型</h4>
 <p>大多數 I 型患者出生時就有嚴重的聽力損失。由視網膜色素病變引起的視力損失在童年就會很明顯，由周邊視野損失漸漸進展到中央。同時患者還會有內耳前庭系統的異常，因此會有平衡問題。罹患此病的孩童，開始獨立坐立和走路的時間可能比平常晚，同時在學習騎自行車和以及進行某些運動時有困難。</p>
