--- a/public/document/尤塞氏症患者的困境/index.html
+++ b/public/document/尤塞氏症患者的困境/index.html
@@ -32,7 +32,7 @@
 
   <!-- Main Stylesheet -->
   
-  <link rel="stylesheet" href="http://localhost:1313/scss/main.1b1d1cb8124fa6c8baa7092329cfd6c0c9d71db4f1e400feb3e4ea6f9f3cc27a7dc8c4a2e4d3e846b3e310718bbf43b8784670f16ad27e7b2ab9d4ab404dd3e6.css" integrity="sha512-Gx0cuBJPpsi6pwkjKc/WwMnXHbTx5AD&#43;s&#43;Tqb588wnp9yMSi5NPoRrPjEHGLv0O4eEZw8WrSfnsqudSrQE3T5g==" media="screen">
+  <link rel="stylesheet" href="http://localhost:1313/scss/main.4cb3d140e7b98f25cfd274d083a6a569524523f7c56a8ad53fda9bc6cb5121a50add313dd8e3a812a1c7c8be526eb26ef5c256273c1ca6f367ae9722ab0c3f85.css" integrity="sha512-TLPRQOe5jyXP0nTQg6alaVJFI/fFaorVP9qbxstRIaUK3TE92OOoEqHHyL5SbrJu9cJWJzwcpvNnrpciqww/hQ==" media="screen">
 
   <!--Favicon-->
   <link rel="shortcut icon" href="http://localhost:1313/images/favicon.png" type="image/x-icon">
@@ -255,7 +255,7 @@
       <a href="/document/%E4%BB%80%E9%BA%BC%E6%98%AF%E5%B0%A4%E5%A1%9E%E6%B0%8F%E7%97%87/">
         <div class="card col-lg-6 col-sm-6 mb-5 bg-dark" style="width: 30rem; padding: 10px;">
           <h4 class="card-title">上一篇：</h4>
-          <h5 class="card-subtitle mb-2 text-muted">什麼是尤塞氏症？</h5>
+          <h5 class="card-subtitle mb-2 text-muted">什麼是尤塞氏症？尤塞氏症介紹</h5>
         </div>
       </a>
       
